fix(css): Fix too narrow margin of checkboxes in task lists

--- a/Contents/Resources/github.css
+++ b/Contents/Resources/github.css
@@ -10,6 +10,10 @@ html {
   display: none;
 }
 
+.markdown-body .task-list-item input {
+  margin-right: 0.6em;
+}
+
 @media screen {
   .markdown-body {
     margin: 0 auto;
